// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MDTsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "mdtsPanel": false,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="mdtsPanel"
      title="MDT Meeting"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Service / Team
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <span>
                      No Multidisciplinary Team
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Request
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <span>
                      No MDT date
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Meeting
                  </label>
                  <span>
                    Not Available
                  </span>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Link to MDT Web Service Directory
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <span>
                      No Link
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Question For MDT
                  </label>
                  <span>
                    No Question For MDT
                  </span>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Meeting Discussion
                  </label>
                  <span>
                    No Meeting Discussion
                  </span>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <MDTsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "mdtsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="mdtsPanel"
      title="Edit MDT"
    >
      <ReduxForm
        detail={
          Object {
            "dateOfMeeting": 1456258262000,
            "dateOfRequest": 1482170593395,
            "notes": "Investigations normal. Review in 3 weeks",
            "question": "Increasing back pain",
            "servicePageLink": "test",
            "serviceTeam": "MDT Prostate Cancer team",
            "source": "ethercis",
            "sourceId": "94133578-f505-4e76-b4ed-762462508801",
            "timeOfMeeting": 72662000,
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <MDTsDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "mdtsPanel": false,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="mdtsPanel"
      title="MDT Meeting"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Service / Team
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <ul
                      className="list-reset"
                    >
                      <li>
                        MDT Prostate Cancer team
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Request
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <ul
                      className="list-reset"
                    >
                      <li>
                        19-Dec-2016
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Meeting
                  </label>
                  <ul
                    className="list-reset"
                  >
                    <li>
                      23-Feb-2016
                    </li>
                  </ul>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Link to MDT Web Service Directory
                  </label>
                  <div
                    className="form-control-static"
                  >
                    <a
                      href="test"
                    >
                      test
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Question For MDT
                  </label>
                  <ul
                    className="list-reset"
                  >
                    <li>
                      Increasing back pain
                    </li>
                  </ul>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Meeting Discussion
                  </label>
                  <ul
                    className="list-reset"
                  >
                    <li>
                      Investigations normal. Review in 3 weeks
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    ethercis
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
